2
File "H:\pychram\pulled\newtest\newscriptmulti.py", line 176
    tags = {tag['Key']: tag['Value']} for tag in response['TagDescriptions'][0]['Tags']
                                      ^^^
SyntaxError: invalid syntax
